--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </select>
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Reservar Horário</button>
 </form>
 
 <style>
