--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Formulário Cerco de Jericó</title>
     <!-- Other head elements -->
 </head>
+<h1>Reserve seu horário para o Cerco de Jericó</h1>
 <form action="https://hook.us1.make.com/m3qac7bgdssup8g4foar9jhswqy5ckhk" method="POST">
     <div class="form-group">
         <label for="name">Nome:</label>
@@ -52,6 +53,11 @@
 </form>
 
 <style>
+    h1 {
+        text-align: center;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
     body {
         font-family: Arial, sans-serif;
         background-color: #f2f2f2;
