--- a/error.html
+++ b/error.html
@@ -31,7 +31,7 @@
 <body>
 <div class="error-message">
     <h2>Que pena!</h2>
-    <p>Esse horário para realização do cerco não está mais disponível.</p>
+    <p>O horário '' não está mais disponível para reserva.</p>
 </div>
 </body>
 </html>
