--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 data.forEach(slot => {
                     const option = document.createElement('option');
                     option.value = slot.horario;
-                    option.text = slot.horario;
+                    option.text = slot.horario + ' - ' + slot.quantidadeDisponivel + ' vagas'
                     timeSlotSelect.add(option);
                 });
             })
