--- a/success.html
+++ b/success.html
@@ -31,7 +31,7 @@
 <body>
 <div class="success-message">
     <h2>Obrigado!</h2>
-    <p>Seu horário de cerco foi reservado para ''.</p>
+    <p>Seu horário de cerco foi reservado para <strong>''</strong>.</p>
 </div>
 </body>
 </html>
