--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
             background-color: #f2f2f2;
         }
 
-        .error-message {
+        .success-message {
             background-color: #4CAF50;
             color: white;
             padding: 20px;
@@ -19,11 +19,11 @@
             max-width: 400px;
         }
 
-        .error-message h2 {
+        .success-message h2 {
             margin-top: 0;
         }
 
-        .error-message p {
+        .success-message p {
             margin-bottom: 0;
         }
     </style>
