feat: adiciona aviso de horário

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         </select>
     </div>
 
+    <small><i style="display: inline-block; margin-top: 10px; margin-left: 5px; margin-bottom: 25px">
+        Lembre-se de selecionar o horário em que você possa melhor servir a Deus e não o que lhe for mais conveniente.
+        Os horários com maior dificuldade para encontrar membros são os de madrugada. E os de 12h às 14h. Se possível,
+        priorize esses.
+    </i></small>
+
     <button type="submit" class="btn btn-primary">Reservar Horário</button>
 </form>
 
