--- a/index.html
+++ b/index.html
@@ -124,4 +124,23 @@
             })
             .catch(error => console.error('Error fetching time slots:', error));
     };
+
+    document.getElementById('phone').addEventListener('input', function(e) {
+        const input = e.target.value.replace(/\D/g, ''); // Step 2: Remove non-numeric characters
+        let formattedInput = '';
+
+        // Step 3: Format the input
+        if (input.length > 0) {
+            formattedInput += '(' + input.substring(0, 2);
+        }
+        if (input.length >= 3) {
+            formattedInput += ') ' + input.substring(2, 7);
+        }
+        if (input.length > 7) {
+            formattedInput += '-' + input.substring(7, 11);
+        }
+
+        // Step 4: Update the input field
+        e.target.value = formattedInput;
+    });
 </script>
