--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Formulário Cerco de Jericó</title>
     <!-- Other head elements -->
 </head>
-<h2>Reserve seu horário para o Cerco de Jericó</h2>
+<h2 id="title">Reserve seu horário para o Cerco de Jericó</h2>
 <form action="https://hook.us1.make.com/m3qac7bgdssup8g4foar9jhswqy5ckhk" method="POST">
     <div class="form-group">
         <label for="name">Nome:</label>
@@ -113,6 +113,10 @@
         const acampamento = new URLSearchParams(window.location.search).get('acampamento');
         if (!acampamento) {
             alert('Link incorreto!');
+        } else if (acampamento === 'fac10') {
+            document.getElementById('title').innerHTML = '10º FAC<br>Reserve seu horário para o Cerco de Jericó';
+        } else {
+            document.getElementById('title').innerHTML = '16º Sênior<br>Reserve seu horário para o Cerco de Jericó';
         }
         // Fetch time slot options from custom endpoint
         fetch(`https://5cblx2anbf6jdb346npjelbr640stemu.lambda-url.us-east-1.on.aws/?acampamento=${acampamento}`)
