--- a/error.html
+++ b/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Form Success Message</title>
+    <title>Erro ao realizar reserva</title>
     <meta charset="utf-8">
     <style>
         body {
