--- a/success.html
+++ b/success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Form Success Message</title>
+    <title>Reserva Confirmada</title>
     <meta charset="utf-8">
     <style>
         body {
