--- a/error.html
+++ b/error.html
@@ -31,7 +31,14 @@
 <body>
 <div class="error-message">
     <h2>Que pena!</h2>
-    <p>O horário <strong>''</strong> não está mais disponível para reserva.</p>
+    <p></p>
 </div>
 </body>
 </html>
+
+<script>
+    window.onload = function () {
+        const params = new URLSearchParams(window.location.search);
+        document.querySelector('.error-message p').innerHTML = params.get('message');
+    };
+</script>
