feat: trata erros

--- a/index.html
+++ b/index.html
@@ -181,12 +181,22 @@
             })
                 .then(response => response.json())
                 .then(data => {
-                    console.log('Success:', data);
-                    window.location.href = `success.html?nome=${name}&horario=${timeSlot}`;
+                    if (data.ok) {
+                        console.log('Success:', data);
+                        window.location.href = `success.html?nome=${name}&horario=${timeSlot}`;
+                    } else {
+                        if (data.errorType === 'RESERVA_EXISTENTE') {
+                            alert('Você já possui uma reserva de horário para o cerco, não é possível realizar outra.');
+                        } else if (data.errorType === 'VAGAS_ESGOTADAS') {
+                            alert(`Vagas esgotadas para o horário <strong>'${timeSlot}'</strong>.
+                            Por favor, selecione outro horário.`);
+                        } else {
+                            alert('Erro ao realizar reserva. Por favor, tente novamente.');
+                        }
+                    }
                 })
                 .catch((error) => {
                     console.error('Error:', error);
-                    // Aqui você pode tratar erros de envio, como exibir uma mensagem de erro
                 });
         });
     };
