--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             })
                 .then(response => response.json())
                 .then(data => {
+                    console.log('Data:', data);
                     if (data.ok) {
                         console.log('Success:', data);
                         window.location.href = `success.html?nome=${name}&horario=${timeSlot}`;
