--- a/index.html
+++ b/index.html
@@ -139,9 +139,6 @@
 
 <script>
     window.onload = function () {
-        const showLoading = () => document.getElementById('loading').style.display = 'flex';
-        const hideLoading = () => document.getElementById('loading').style.display = 'none';
-
         const acampamento = new URLSearchParams(window.location.search).get('acampamento');
         if (!acampamento) {
             alert('Link incorreto!');
@@ -150,6 +147,28 @@
         } else {
             document.getElementById('title').innerHTML = '16º Sênior<br>Reserve seu horário para o Cerco de Jericó';
         }
+
+        document.getElementById('phone').addEventListener('input', function(e) {
+            const input = e.target.value.replace(/\D/g, ''); // Step 2: Remove non-numeric characters
+            let formattedInput = '';
+
+            // Step 3: Format the input
+            if (input.length > 0) {
+                formattedInput += '(' + input.substring(0, 2);
+            }
+            if (input.length >= 3) {
+                formattedInput += ') ' + input.substring(2, 7);
+            }
+            if (input.length > 7) {
+                formattedInput += '-' + input.substring(7, 11);
+            }
+
+            // Step 4: Update the input field
+            e.target.value = formattedInput;
+        });
+
+        const showLoading = () => document.getElementById('loading').style.display = 'flex';
+        const hideLoading = () => document.getElementById('loading').style.display = 'none';
 
         // Fetch time slot options from custom endpoint
         showLoading();
