refactor: altera para o value da option ser anjo_lider

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <select class="form-control" id="sector" name="sector" required>
             <option value="">Selecione o seu setor</option>
             <option value="animacao">Animação</option>
-            <option value="anjo">Anjo/Líder/Padrinho</option>
+            <option value="anjo_lider">Anjo/Líder/Padrinho</option>
             <option value="cantinho">Cantinho Mariano</option>
             <option value="capela">Capela</option>
             <option value="cozinha">Cozinha</option>
