--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         if (!acampamento) {
             alert('Link incorreto!');
         } else {
-            document.getElementById('title').innerHTML = '11º FAC<br>Reserve seu horário para o Cerco de Jericó';
+            document.getElementById('title').innerHTML = '18º SÊNIOR<br>Reserve seu horário para o Cerco de Jericó';
         }
 
         document.getElementById('phone').addEventListener('input', function(e) {
