--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
             alert('Link incorreto!');
         } else if (acampamento === 'mirim1') {
             document.getElementById('title').innerHTML = '1º MIRIM<br>Reserve seu horário para o Cerco de Jericó';
+        } else if (acampamento === 'mirim2') {
+            document.getElementById('title').innerHTML = '2º MIRIM<br>Reserve seu horário para o Cerco de Jericó';
         } else if (acampamento === 'senior20') {
             document.getElementById('title').innerHTML = '20º SÊNIOR<br>Reserve seu horário para o Cerco de Jericó';
         } else {
