--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
             document.getElementById('title').innerHTML = '2º MIRIM<br>Reserve seu horário para o Cerco de Jericó';
         } else if (acampamento === 'senior20') {
             document.getElementById('title').innerHTML = '20º SÊNIOR<br>Reserve seu horário para o Cerco de Jericó';
+        } else if (acampamento === 'senior21') {
+            document.getElementById('title').innerHTML = '21º SÊNIOR<br>Reserve seu horário para o Cerco de Jericó';
         } else {
             document.getElementById('title').innerHTML = '18º SÊNIOR<br>Reserve seu horário para o Cerco de Jericó';
         }
